clusters/takeout/apps/btc-rpc-explorer/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: btc-rpc-explorer
  labels:
    app: btc-rpc-explorer
spec:
  replicas: 0 # active longhorn
  selector:
    matchLabels:
      app: btc-rpc-explorer
  template:
    metadata:
      annotations: {}
        # linkerd.io/inject: enabled
      labels:
        app: btc-rpc-explorer
    spec:
      # affinity:
      #   podAffinity:
      #     requiredDuringSchedulingIgnoredDuringExecution:
      #     - labelSelector:
      #         matchExpressions:
      #         - key: app
      #           operator: In
      #           values:
      #           - bitcoin
      #           - btc-rpc-explorer-cache
      #           - electrumx
      #       topologyKey: kubernetes.io/hostname
      containers:
        - name: btc-rpc-explorer
          image: tyzbit/btc-rpc-explorer:v3.1.1
          imagePullPolicy: Always
          ports:
            - containerPort: 3002
              name: http
              protocol: TCP
          resources:
            requests:
              cpu: 100m
            limits:
              memory: 512Mi
      imagePullSecrets:
        - name: docker-hub
